force-app/main/default/objects/Projects__c/Projects__c.object-meta.xml
<CustomObject>
    <description>Primary object used in the application for Professional Services and in the Program Management Application. This is from prior to being sold from Qualcomm.</description>
    <label>Omnitracs Projects (old)</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Project No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Omnitracs Projects (old)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>