force-app/main/default/objects/Projects__c/fields/Actual_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin__c</fullName>
    <formula>IF (Project_Revenue__c &gt;0,1 - (Project_Cost__c / Project_Revenue__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>