force-app/main/default/objects/Projects__c/fields/Auto_Status_Calc__c.field-meta.xml
<CustomField>
    <fullName>Auto_Status_Calc__c</fullName>
    <formula>IF(   Total_Hours__c   &gt;  Total_Estimated_Hours__c , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Total Hrs exceed Est Hrs&quot;), IF(TODAY() &gt;  Estimated_Completion_Date__c, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Est Comp Date &gt; Today&quot;),  IF(Actual_Margin__c - Target_Margin__c &lt;0 , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Actual Margin below Target&quot;),IF(AND(  Target_Margin__c &gt; 0, Project_Cost__c &gt;  Project_Revenue__c),IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Project Cost exceeds estimate&quot;),  IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;No exceptions&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated Project Status Flag based on pre-defined criteria, including Project Hours, Completion Date, Margin and Cost.</inlineHelpText>
    <label>Auto Status Calc</label>
    <type>Text</type>
</CustomField>