force-app/main/default/objects/Projects__c/fields/Auto_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Auto_Status_Flag__c</fullName>
    <formula>IF(ISPICKVAL(  Project_Stage__c , &quot;In Progress&quot;),  Auto_Status_Calc__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Status Flag</label>
    <type>Text</type>
</CustomField>