force-app/main/default/objects/Projects__c/fields/Billable_Expenses_Status__c.field-meta.xml
<CustomField>
    <fullName>Billable_Expenses_Status__c</fullName>
    <formula>IF(AND(Expenses_Billable__c,  Total_Billable_Expenses__c -  Total_Travel_Expenses__c = 0),&quot;Billable Expenses match Estimated Expenses&quot;, IF( Expenses_Billable__c, IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;IF( Total_Billable_Expenses_Remaining__c &lt; 0, &quot;01550000000IHWI&quot;,&quot;01550000000IHWN&quot;),&quot;&quot;), &quot;No billable expenses allowed&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Expenses Status</label>
    <type>Text</type>
</CustomField>