force-app/main/default/objects/Projects__c/fields/Billable_Hours_Status__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Status__c</fullName>
    <formula>IF ( ISPICKVAL(Billing__c, &quot;Time &amp; Materials&quot;), IF(Total_Billable_Hours_Remaining__c = 0, &quot;Est Billable Hours match Actual Billable Hours&quot;, IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;IF( Total_Billable_Hours_Remaining__c &lt; 0 , &quot;01550000000IHVt&quot;,&quot;01550000000IHW9&quot;),&quot;&quot;)), &quot;No billable hours - Fixed Bid&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Hours Status</label>
    <type>Text</type>
</CustomField>