force-app/main/default/objects/Projects__c/fields/Chareable_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Chareable_Hours_Remaining__c</fullName>
    <formula>Est_Chargeable_Hours__c - Chargeable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chareable Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>