force-app/main/default/objects/Projects__c/fields/Charge_Rate_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Charge_Rate_Per_Hour__c</fullName>
    <label>Charge Rate Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>