force-app/main/default/objects/Projects__c/fields/Chargeable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Hours__c</fullName>
    <label>Chargeable Hours</label>
    <summarizedField>Project_Time__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Time__c.Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Time__c.SFDC_Projects__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>