force-app/main/default/objects/Projects__c/fields/Chargeable_Hours_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Hours_Status__c</fullName>
    <formula>IF ( ISPICKVAL(Billing__c, &quot;Time &amp; Materials&quot;), IF( Chareable_Hours_Remaining__c  = 0, &quot;Est Chargeable Hours match Actual Chargeable Hours&quot;, IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;IF(  Chareable_Hours_Remaining__c  &lt; 0 , &quot;01550000000IHVt&quot;,&quot;01550000000IHW9&quot;),&quot;&quot;)), &quot;No billable hours - Fixed Bid&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeable Hours Status</label>
    <type>Text</type>
</CustomField>