force-app/main/default/objects/Projects__c/fields/Checklist_Step__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Step__c</fullName>
    <formula>CASE ( Percent_Complete_Score__c , 20, &quot;1 - Estimate Delivered (1 of 5)&quot;, 40, &quot;2 - Estimate Accepted (2 of 5)&quot;, 60, &quot;3 - Work Completed (3 of 5)&quot;, 80, &quot;4 - Final Acceptance (4 of 5)&quot;, 100, &quot;5 -  Submitted for Billing (5 of 5)&quot;, &quot;0 - Not started (0 of 5)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist Step</label>
    <type>Text</type>
</CustomField>