force-app/main/default/objects/Projects__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>GT Web</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>PPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>