force-app/main/default/objects/Projects__c/fields/Client_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Client Project Manager must be an existing Contact in Salesforce. If the Contact does not exist, please create a new Contact.</inlineHelpText>
    <label>Client Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>