force-app/main/default/objects/Projects__c/fields/Commercial_Release_Health__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Release_Health__c</fullName>
    <formula>IF(ISPICKVAL(Commercial_Release_Health_RYG__c,&quot;Green&quot;), IMAGE( &quot;/servlet/servlet.FileDownload?file=01550000000FzOM&quot;,&quot;&quot;), 
IF(ISPICKVAL(Commercial_Release_Health_RYG__c,&quot;Yellow&quot;), IMAGE( &quot;/servlet/servlet.FileDownload?file=01550000000FzOC&quot;,&quot;&quot;), 
IF(ISPICKVAL(Commercial_Release_Health_RYG__c,&quot;Red&quot;), IMAGE( &quot;/servlet/servlet.FileDownload?file=01550000000FzO7&quot;,&quot;&quot;), &quot;&quot; 
) 
) 
)</formula>
    <label>Commercial Release Health</label>
    <type>Text</type>
</CustomField>