force-app/main/default/objects/Projects__c/fields/Contractor_Costs__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Costs__c</fullName>
    <inlineHelpText>Total amount spent on outside contractors / consultants for this project</inlineHelpText>
    <label>Contrator Costs</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>