force-app/main/default/objects/Projects__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>Discount amount per QSR agreement</description>
    <inlineHelpText>Discount amount per QSR agreement</inlineHelpText>
    <label>Discount Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>