force-app/main/default/objects/Projects__c/fields/Est_Chargeable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Est_Chargeable_Hours__c</fullName>
    <label>Est. Chargeable Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>