force-app/main/default/objects/Projects__c/fields/Estimate_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimate Accepted</label>
    <type>Checkbox</type>
</CustomField>