force-app/main/default/objects/Projects__c/fields/Estimate_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Accepted_Date__c</fullName>
    <label>Estimate Accepted Date</label>
    <type>Date</type>
</CustomField>