force-app/main/default/objects/Projects__c/fields/Estimate_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimate Delivered</label>
    <type>Checkbox</type>
</CustomField>