force-app/main/default/objects/Projects__c/fields/Estimate_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Delivered_Date__c</fullName>
    <label>Estimate Delivered Date</label>
    <type>Date</type>
</CustomField>