force-app/main/default/objects/Projects__c/fields/Estimated_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Billable_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>An estimate of the hours that will be billable.</inlineHelpText>
    <label>Est. Billable Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>