force-app/main/default/objects/Projects__c/fields/Estimated_Non_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Non_Billable_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>An estimate of the hours that will be non-billable.</inlineHelpText>
    <label>Est. Non-Billable Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>