force-app/main/default/objects/Projects__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <label>Est. Start Date</label>
    <type>Date</type>
</CustomField>