force-app/main/default/objects/Projects__c/fields/Expenses_Billable__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Are the expenses associated to this Project billable?</inlineHelpText>
    <label>Expenses Billable</label>
    <type>Checkbox</type>
</CustomField>