force-app/main/default/objects/Projects__c/fields/Final_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Final_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Acceptance</label>
    <type>Checkbox</type>
</CustomField>