force-app/main/default/objects/Projects__c/fields/Final_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Acceptance_Date__c</fullName>
    <label>Final Acceptance Date</label>
    <type>Date</type>
</CustomField>