force-app/main/default/objects/Projects__c/fields/Fixed_Rate_Charge__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Charge__c</fullName>
    <label>Fixed Rate Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>