force-app/main/default/objects/Projects__c/fields/Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used__c</fullName>
    <formula>IF ( Chargeable_Hours__c  &gt; 0, IF( Est_Chargeable_Hours__c  &gt; 0,  Chargeable_Hours__c  /  Est_Chargeable_Hours__c , 0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Used %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>