force-app/main/default/objects/Projects__c/fields/Hours_Used_Percent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used_Percent__c</fullName>
    <formula>IF (Total_Billable_Hours__c &gt; 0, IF(Estimated_Billable_Hours__c &gt; 0, Total_Billable_Hours__c / Estimated_Billable_Hours__c, 0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Total Billable Hours / Estimated Billable Hours. If this number is &gt; 100% than the estimated hours have been exceeded for this project.</inlineHelpText>
    <label>Hours Used %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>