force-app/main/default/objects/Projects__c/fields/Internal_Use_Only_Image__c.field-meta.xml
<CustomField>
    <fullName>Internal_Use_Only_Image__c</fullName>
    <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=01550000000iV0f&quot; ,&quot;&quot;)</formula>
    <label>&lt;FONT COLOR=#FQFFFF&gt;</label>
    <type>Text</type>
</CustomField>