force-app/main/default/objects/Projects__c/fields/IP_Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>IP_Assessment_Complete__c</fullName>
    <inlineHelpText>This is required to be completed 3 months before commercial release. It is to ensure all projects are assessing IP and submitting invention applications for potential opportunities.</inlineHelpText>
    <label>IP Assessment Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In-Process</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>