force-app/main/default/objects/Projects__c/fields/Last_POR_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_POR_Decision_Date__c</fullName>
    <label>Last POR Decision Date</label>
    <type>DateTime</type>
</CustomField>