force-app/main/default/objects/Projects__c/fields/Last_Project_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Project_Decision_Date__c</fullName>
    <label>Last Project Decision Date</label>
    <type>DateTime</type>
</CustomField>