force-app/main/default/objects/Projects__c/fields/Net_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Billable_Amount__c</fullName>
    <description>Shows the actual billable amount by subtracting the discount applied from the Total billable amount field value.</description>
    <formula>Total_Billable_Amount__c -  Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>