force-app/main/default/objects/Projects__c/fields/New_Estimate_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Estimate_Accepted_Date__c</fullName>
    <label>New Estimate Accepted Date</label>
    <type>Date</type>
</CustomField>