force-app/main/default/objects/Projects__c/fields/New_Estimate_Delivered__c.field-meta.xml
<CustomField>
    <fullName>New_Estimate_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Estimate Delivered</label>
    <type>Checkbox</type>
</CustomField>