force-app/main/default/objects/Projects__c/fields/No_of_Open_Issues__c.field-meta.xml
<CustomField>
    <fullName>No_of_Open_Issues__c</fullName>
    <description>Number of Open Issues from the Project Issues related object.</description>
    <inlineHelpText># of Open Issues from the Project Issues related list.</inlineHelpText>
    <label># of Open Issues</label>
    <summaryFilterItems>
        <field>Project_Issues__c.Issue_Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Issues__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>