force-app/main/default/objects/Projects__c/fields/Non_Chargeable_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Non_Chargeable_Hours_Remaining__c</fullName>
    <formula>Est_Non_Chargeable_Hours__c - Non_Chargeable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Chargeable Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>