force-app/main/default/objects/Projects__c/fields/Onsite_Travel_Expected__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Travel_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is onsite travel expected for this project?</inlineHelpText>
    <label>Onsite Travel Expected</label>
    <type>Checkbox</type>
</CustomField>