force-app/main/default/objects/Projects__c/fields/Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem__c</fullName>
    <description>Daily per diem rate for this project.</description>
    <inlineHelpText>Daily Per Diem amount for this Project. Click the &quot;Per Diem Rates&quot; hyperlink in the Web Links section on this screen to obtain the current Per Deim Rate by State/City.</inlineHelpText>
    <label>Daily Per Diem Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>