force-app/main/default/objects/Projects__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <formula>Percent_Complete_Score__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the Project Checklist</inlineHelpText>
    <label>Checklist %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>