force-app/main/default/objects/Projects__c/fields/Percent_Complete_Score__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete_Score__c</fullName>
    <formula>IF( Submitted_for_Billing__c, 100, 
           IF( Final_Acceptance__c , 80, 
       IF( Work_Completed__c, 60, 
   IF( Estimate_Accepted__c, 40, 
IF ( Estimate_Delivered__c, 20, 0
)))))</formula>
    <label>Percent Complete Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>