force-app/main/default/objects/Projects__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concept</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Sustaining/EOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>