force-app/main/default/objects/Projects__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA&amp;D</fullName>
            </value>
            <value>
                <fullName>Access (SaaS)</fullName>
            </value>
            <value>
                <fullName>AccessPlus (SaaS)</fullName>
            </value>
            <value>
                <fullName>AlliancePRO</fullName>
            </value>
            <value>
                <fullName>AMI</fullName>
            </value>
            <value>
                <fullName>AS400 Thin Client</fullName>
            </value>
            <value>
                <fullName>CER</fullName>
            </value>
            <value>
                <fullName>ChoiceTRAK</fullName>
            </value>
            <value>
                <fullName>CoS Workflow Host Integration</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Dispatch Central</fullName>
            </value>
            <value>
                <fullName>DRT</fullName>
            </value>
            <value>
                <fullName>Dsi Transportation Mgr</fullName>
            </value>
            <value>
                <fullName>EMSI</fullName>
            </value>
            <value>
                <fullName>Exact Fuel</fullName>
            </value>
            <value>
                <fullName>FACTS</fullName>
            </value>
            <value>
                <fullName>Fleet Advisor</fullName>
            </value>
            <value>
                <fullName>GlobalTRACS</fullName>
            </value>
            <value>
                <fullName>Handheld</fullName>
            </value>
            <value>
                <fullName>HEAT</fullName>
            </value>
            <value>
                <fullName>Horizon</fullName>
            </value>
            <value>
                <fullName>HOS</fullName>
            </value>
            <value>
                <fullName>IDSC ExpertFuel</fullName>
            </value>
            <value>
                <fullName>IDSC Netwise</fullName>
            </value>
            <value>
                <fullName>iNAV</fullName>
            </value>
            <value>
                <fullName>InCab Scanning</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Intermodal Dispatch</fullName>
            </value>
            <value>
                <fullName>iWF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>