force-app/main/default/objects/Projects__c/fields/Proj_Status__c.field-meta.xml
<CustomField>
    <fullName>Proj_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>