force-app/main/default/objects/Projects__c/fields/Proj_Type__c.field-meta.xml
<CustomField>
    <fullName>Proj_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic R&amp;D</fullName>
            </value>
            <value>
                <fullName>Domestic Sust</fullName>
            </value>
            <value>
                <fullName>Domestic R&amp;D Sust</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Int’l R&amp;D</fullName>
            </value>
            <value>
                <fullName>Int’l Sust</fullName>
            </value>
            <value>
                <fullName>Biz Dev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>